--- a/hosted/style.css
+++ b/hosted/style.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+
 html, body {
-    font-family:Arial, Helvetica, sans-serif;
+    font-family: 'Press Start 2P', cursive;
     height: 100%;
     width: 100%;
     margin: 0;
@@ -18,16 +20,16 @@ h2 {
 }
 
 #clickerImg {
-    width: 50%;
-    margin-left: 25%;
+    width: 20%;
+    margin-left: 40%;
     transition-duration: 0.2s;
     margin-top: 100px;
 }
 
 #clickerImg:hover {
     transition-duration: 0.2s;
-    width: 52%;
-    margin-left: 24%;
+    width: 22%;
+    margin-left: 39%;
 }
 
 #logo {
@@ -284,4 +286,42 @@ h3.domoAge {
 
 .domo:last-child {
     margin-bottom:10px;
+}
+
+#store {
+    background-color:#6E2594;
+    border-radius: 10px;
+    padding: 10px;
+    text-align: center;
+    width: 60%;
+    margin-left: 20%;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+button {
+    background-color: #119DA4;
+    color: white;
+    font-size: 1em;
+    border-radius: 5px;
+    border: 0px;
+    transition-duration: 0.2s;
+    font-family: 'Press Start 2P', cursive;
+    padding: 10px;
+}
+
+button:hover {
+    font-size: 1.1em;
+    background-color: #ECD444;
+    transition-duration: 0.2s;
+}
+
+#message {
+    text-align: center;
+}
+
+#message > img {
+    width: 250px;
+    height: 250px;
 }
