--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -20,7 +20,7 @@
   <h2>A React Clicker Game</h2>
   <section id="content"></section>
   <div id="domoMessage"><img id="speech" src="/assets/img/speech.png" alt="speech box"/>
-    <h3><span id="errorMessage">Wrong username or password</span></h3><img id="domo" src="assets/img/domo.png" alt="domo"/>
+    <h3><span id="errorMessage">Wrong username or password</span></h3><img id="domo" src="assets/img/wario.png" alt="domo"/>
   </div>
   <script src="/assets/loginBundle.js"></script>
 </body>
