--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -19,8 +19,8 @@
   <h1>Wario's Coin Generator</h1>
   <h2>A React Clicker Game</h2>
   <section id="content"></section>
-  <div id="domoMessage"><img id="speech" src="/assets/img/speech.png" alt="speech box"/>
-    <h3><span id="errorMessage">Wrong username or password</span></h3><img id="domo" src="assets/img/wario.png" alt="domo"/>
+  <div id="warioMessage"><img id="speech" src="/assets/img/speech.png" alt="speech box"/>
+    <h3><span id="errorMessage">Wrong username or password</span></h3><img src="assets/img/wario.png" alt="Wario"/>
   </div>
   <script src="/assets/loginBundle.js"></script>
 </body>
