--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -18,6 +18,7 @@
   </nav>
   <h1>Wario's Coin Generator</h1>
   <h2>A React Clicker Game</h2>
+  <img src="/assets/img/warioTitle.gif" alt="Wario" id="titleImg">
   <section id="content"></section>
   <div id="warioMessage"><img id="speech" src="/assets/img/speech.png" alt="speech box"/>
     <h3><span id="errorMessage">Wrong username or password</span></h3><img src="assets/img/wario.png" alt="Wario"/>
