--- a/hosted/style.css
+++ b/hosted/style.css
@@ -235,9 +235,22 @@ button:hover {
 }
 
 #signupForm {
-    font-family:Arial, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: #6E2594;
+    padding: 10px;
+    border-radius: 10px;
+    text-align: center;
 }
 
 #loginForm {
     font-family: Arial, Helvetica, sans-serif;
+    background-color: #6E2594;
+    padding: 10px;
+    border-radius: 10px;
+    text-align: center;
+}
+
+#titleImg {
+    margin-left: 40%;
+    width: 20%;
 }
